# ugexx

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: rental-search.yml
src/: config.py  dedupe.py  filter.py  main.py  models.py  slack.py
src/sources/: apartments_com.py  base.py  craigslist.py  realtor.py  redfin.py  trulia.py  zillow.py
