[project]
name = "ventura-rental-search"
version = "0.1.0"
description = "Twice-daily Ventura County rental search digest delivered to Slack"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
